fix: 불변객체로 반환하지 않도록 수정