@@ -4,6 +4,7 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -68,7 +69,7 @@ public class GetPlanetServiceImpl implements GetPlanetService {
 				.currentParticipants(p.getCurrentParticipants())
 				.planetStatus(p.getStatus().toString())
 				.build())
-			.toList();
+			.collect(Collectors.toList());
 	}
 
 	/**
